--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>MVC Blog</title>
-        <link rel="stylesheet" type="text/css" href="../../public/css/style.css">
-    </head>
-    <body>
-        <header>
-            <h1>Welcome To My MVC Tech Blog</h1>
-        </header>
-        <nav>
-            <a>HOME</a>
-            {{#if logged_in}}
-            <button id="login">LOGIN</button>
-            {{else}}
-            <button id="logout">LOGOUT</button>
-            {{/if}}
-        </nav>
-        <main>
-            <h2>Lastest Post</h2>
-            <div id="newest_post">
-                PostPlaceHolder
-            </div>
-        </main>
 
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MVC BLOG!</title>
+  <link rel="stylesheet" href="/css/jass.css">
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+  <div class="flex-column justify-space-around">
+    <header class="display-flex justify-space-between align-center p-2">
+      <h1>
+        <a href="/">Welcome To My MVC Blog!</a>
+      </h1>
+      <nav>
+        <!-- Conditionally render login or logout links -->
+        {{#if logged_in}}
+        <a href="/profile">profile</a> |
+        <button class="no-button" id="logout">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
+      </nav>
+    </header>
+    <main class="container container-fluid mt-5">
+      <!-- Render the sub layout -->
+      {{{ body }}}
+    </main>
+    <footer>
+      
+    </footer>
+  </div>
+
+  <!-- Render script for logged in users only -->
+  {{#if logged_in}}
+  <script src="/public/js/logout.js"></script>
+  {{else}}
+  <script src="/public/js/login.js"></script>
+  {{/if}}
+</body>
 
 </html>
