--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,5 +1,13 @@
-<h1>MVC Posts</h1>
-<h2>Create A New Post</h2>
-<form>
-    
-</form>
+<div class="card">
+    <h2 class="card-header">New Post</h2>
+    <form class=" card-body new-post" id="new-post-form">
+        <label for="post-title" class="from-label">Title</label>
+        <input type="text" id="title" name="post-title" class="form-input"/>
+
+        <label class="form-label" for="body">Text</label>
+        <input id="body" name="body" class="form-input"/>
+        <button type="submit" id="new-post">New Post</button>
+    </form>
+</div>
+
+<script src="./js.postCRUD.js"></script>
